syntax = "proto3";

package api;

import "google/protobuf/timestamp.proto";

//option go_package = "postpb";

message Post {
    string id = 1;
    string user_id = 2;
    string text = 4;
    string parent_post_id = 5;
    uint64 comment_count = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
}

message CreatePostRequest {
    string user_id = 1;
    string text = 2;

}

message CreatePostResponse {
    Post post = 1;
}


message GetPostRequest {
    string id = 1;
}

message GetPostResponse {
    Post post = 1;
}

message UpdatePostRequest {
    string post_id = 1;
    string user_id = 2;
    string text = 3;
}

message UpdatePostResponse {
    string post_id = 1;
    string user_id = 2;
}

message DeletePostRequest {
    Post post = 1;
}

message DeletePostResponse {
    bool is_success = 1;
}

message ListPostsRequest {
}

message ListPostsResponse {
    repeated Post posts = 1;
}

service PostService {
    rpc CreatePost (CreatePostRequest) returns (CreatePostResponse);
    rpc GetPost (GetPostRequest) returns (GetPostResponse);
    rpc UpdatePost (UpdatePostRequest) returns (UpdatePostResponse);
    rpc DeletePost (DeletePostRequest) returns (DeletePostResponse);
    rpc ListPosts (ListPostsRequest) returns (ListPostsResponse);
}
